# keykey

./: Cargo.toml  Makefile.toml  README.md
host/: Cargo.toml
host/src/: app.rs  key_code.rs  lib.rs  main.rs  packets.rs
keykey/: Cargo.toml  Embed.toml  openocd.cfg  openocd.gdb
keykey/.cargo/: config
keykey/src/: descriptors.rs  flash.rs  keyboard.rs  loggy.rs  main.rs  packets.rs
software/: Cargo.toml
software/src/: app.rs  key_code.rs  lib.rs  main.rs  packets.rs
