[package]
name = "keykey-host"
version = "0.1.0"
authors = ["Thales Fragoso <thales.fragosoz@gmail.com>"]
edition = "2018"

[dependencies]
num_enum = { version = "0.5.1", default-features = false }
crossterm = "0.17.7"
strum_macros = {version = "0.19.2", optional = true }
strum = "0.19.2"

[lib]
name = "keylib"
path = "src/lib.rs"

[[bin]]
name = "keyconfig"
path = "src/main.rs"

[features]
host = ["strum_macros"]
