[package]
name = "keykey-host"
version = "0.1.0"
authors = ["Thales Fragoso <thales.fragosoz@gmail.com>"]
edition = "2018"

[dependencies]
num_enum = { version = "0.5.1", default-features = false }
crossterm = { version = "0.17.7", optional = true }
strum_macros = {version = "0.19.2", optional = true }
strum = { version = "0.19.2", optional = true }
rusb = { version = "0.6.3", optional = true }
anyhow = {version = "1.0.32", optional = true }

[lib]
name = "keylib"
path = "src/lib.rs"

[[bin]]
name = "keyconfig"
path = "src/main.rs"

[features]
host = ["crossterm", "strum_macros", "strum", "rusb", "anyhow"]
